# nekoha.moe-bot

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bot.sh  debug.sh  ldd.sh  run.sh
src/: bot.h  commands.h  config_example.h  db.h  extension.h  main.cpp  socket.h
src/commands/: help.h  ping.h
src/handler/: command_handler.cpp  command_handler.h
src/network/: ping.h
